--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5.0.0",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.0.0"
   }
 }
